@@ -86,6 +86,13 @@
 jvm有2种运行模式：server和client  [传送门1](https://blog.csdn.net/zhuyijian135757/article/details/38391785) [传送门2](https://blog.csdn.net/a158123/article/details/77417042)
 
 
+## 4. 收集器
+### 4.1 G1
+* G1提供了两种GC模式，Young GC和Mixed GC，两种都是完全Stop The World的:
+  * `Young GC`：选定所有年轻代里的Region。通过控制年轻代的region个数，即年轻代内存大小，来控制young GC的时间开销。
+  * `Mixed GC`：选定所有年轻代里的Region，外加根据global concurrent marking统计得出收集收益高的若干老年代Region。在用户指定的开销目标范围内尽可能选择收益高的老年代Region。
+
+  由上面的描述可知，`Mixed GC不是full GC`，它只能回收部分老年代的Region，如果mixed GC实在无法跟上程序分配内存的速度，导致老年代填满无法继续进行Mixed GC，就会使用serial old GC（full GC）来收集整个GC heap。所以我们可以知道，**G1是不提供full GC的**。
 
 
 
@@ -97,6 +104,7 @@ jvm有2种运行模式：server和client  [传送门1](https://blog.csdn.net/zhu
 * Java`堆`在内存中物理地址可以不连续，逻辑地址连续即可；
 * `方法区`也是线程共享的，它保存被虚拟机加载的`类信息`、`常量`、`静态变量`、`即时编译的代码`等数据；
 * `String`存放在`方法区`,1.7之后存放在`堆`上；关于字符串常量池，[《String：字符串常量池》][]中的`字面量和常量池初探`部份解释角度比较新颖；
+* system.gc调用仅仅是建议虚拟机进行回收，并不一定马上会进行gc；
 
 
 
@@ -109,6 +117,26 @@ Tip: `逃逸分析`(`栈上分配`、`同步消除`、`标量替换`)
    Ans: No! 只是HotSpot的特例；
    > 对于习惯在HotSpot虚拟机上开发、部署程序的开发者来说，很多人都更愿意把方法区称为“永久代”（Permanent Generation），本质上两者并不等价，仅仅是因为HotSpot虚拟机的设计团队选择把GC分代收集扩展至方法区，或者说使用永久代来实现方法区而已，这样HotSpot的垃圾收集器可以像管理Java堆一样管理这部分内存，能够省去专门为方法区编写内存管理代码的工作。对于其他虚拟机（如BEA JRockit、IBM J9等）来说是不存在永久代的概念的。
 
+3. String.inter()原理
+   参考：[深入解析String#intern][]
+
+4. 1.8前后如何设置方法区大小？
+   之前：
+   ```
+   -XX:PermSize：设置方法区大小；-XX:MaxPermSize： 设置方法区的最大值
+   ```
+   之后：
+   ```
+   -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m
+   默认情况下，类元数据分配受到可用的本机内存容量的限制（容量依然取决于你使用32位JVM还是64位操作系统的虚拟内存的可用性）。如果没有特别指定MaxMetaspaceSize，元空间将会根据应用程序在运行时的需求动态设置大小。
+   ```
+   参考：[JVM之永久区Permanent区参数设置分析][]
+
+5. 虚引用作用
+   参考：[深入理解JDK中的Reference原理和源码实现][](没看)
+
+6. OopMap与Gc
+   参考：[我爱学Java之JVM中的OopMap][]
 
 
 
@@ -118,11 +146,15 @@ Tip: `逃逸分析`(`栈上分配`、`同步消除`、`标量替换`)
 
 ### 其他
 ##### 优秀博客/文章
-[JVM参数类型][] / [JVM调优工具之jps][] / [jvm 性能调优工具之jstat][] / [jstat详解][] / [jvm指针压缩][] / [jdk8 Metaspace 调优][] / [Java 8: 从永久代（PermGen）到元空间（Metaspace）][]
+[JVM参数类型][] / [JVM调优工具之jps][] / [jvm 性能调优工具之jstat][] / [jstat详解][] / [jvm指针压缩][] / [jdk8 Metaspace 调优][] / [Java 8: 从永久代（PermGen）到元空间（Metaspace）][] / [深入解析String#intern][] / [Java Hotspot G1 GC的一些关键技术][]
+
+##### 调试工具
+[Java命令学习系列（一）——Jps][]
 
 
 [Java 8: 从永久代（PermGen）到元空间（Metaspace）]:https://blog.csdn.net/zhushuai1221/article/details/52122880/
 [jdk8 Metaspace 调优]:https://blog.csdn.net/bolg_hero/article/details/78189621
+[深入解析String#intern]:https://tech.meituan.com/2014/03/06/in-depth-understanding-string-intern.html
 [jvm指针压缩]: https://blog.csdn.net/weixin_34279061/article/details/88014879
 [jstat详解]: https://www.cnblogs.com/lizhonghua34/p/7307139.html
 [jvm 性能调优工具之jstat]: https://www.jianshu.com/p/213710fb9e40
@@ -134,3 +166,8 @@ Tip: `逃逸分析`(`栈上分配`、`同步消除`、`标量替换`)
 [《String：字符串常量池》]:https://segmentfault.com/a/1190000009888357
 [Java中的逃逸分析]:https://blog.csdn.net/w372426096/article/details/80938788
 [IEEE浮点标准详解]:https://blog.csdn.net/sinat_33248998/article/details/51828844
+[JVM之永久区Permanent区参数设置分析]:https://blog.csdn.net/blueheart20/article/details/52103020
+[深入理解JDK中的Reference原理和源码实现]:https://www.throwable.club/2019/02/16/java-reference/#Finalizer守护线程
+[我爱学Java之JVM中的OopMap]:https://blog.csdn.net/woaigaolaoshi/article/details/51439227
+[Java命令学习系列（一）——Jps]:https://www.hollischuang.com/archives/105
+[Java Hotspot G1 GC的一些关键技术]:https://tech.meituan.com/2016/09/23/g1.html
